# docs/swagger.json
@@ -120,9 +120,9 @@
                 }
             }
         },
-        "/orders/delivery/{id}": {
-            "post": {
-                "description": "Deliver existing order",
+        "/orders/cart/{id}": {
+            "put": {
+                "description": "Update existing order shopping cart",
                 "consumes": [
                     "application/json"
                 ],
@@ -132,7 +132,48 @@
                 "tags": [
                     "Orders"
                 ],
-                "summary": "Deliver order",
+                "summary": "Update order shopping cart",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Order ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "update order",
+                        "name": "order",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateShoppingItemsReqDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders/complete/{id}": {
+            "post": {
+                "description": "Complete existing order",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Orders"
+                ],
+                "summary": "Complete order",
                 "parameters": [
                     {
                         "type": "string",
@@ -298,45 +339,6 @@
                         }
                     }
                 }
-            },
-            "put": {
-                "description": "Update existing order",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Orders"
-                ],
-                "summary": "Update order",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Order ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "update order",
-                        "name": "order",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.UpdateOrderItemsReqDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
             }
         }
     },
@@ -400,10 +402,10 @@
                 "canceled": {
                     "type": "boolean"
                 },
-                "created": {
+                "completed": {
                     "type": "boolean"
                 },
-                "delivered": {
+                "created": {
                     "type": "boolean"
                 },
                 "deliveredTime": {
@@ -507,7 +509,7 @@
                 }
             }
         },
-        "dto.UpdateOrderItemsReqDto": {
+        "dto.UpdateShoppingItemsReqDto": {
             "type": "object",
             "required": [
                 "shopItems"
