# internal/dto/update_order.go
@@ -2,6 +2,6 @@ package dto
 
 import "github.com/AleksK1NG/es-microservice/internal/order/models"
 
-type UpdateOrderItemsReqDto struct {
+type UpdateShoppingItemsReqDto struct {
 	ShopItems []*models.ShopItem `json:"shopItems" bson:"shopItems,omitempty" validate:"required"`
 }
